# internal/api/handlers/courses/router.go
@@ -36,22 +36,22 @@ func SetupRoutes(c *components.Components) http.Handler {
 		r.Get("/{id}", func(w http.ResponseWriter, r *http.Request) {
 			GetCourseByID(components.HttpComponents(w, r, c))
 		})
-		r.Post("/{id}/review", func(w http.ResponseWriter, r *http.Request) {
+		r.Post("/{id}/reviews", func(w http.ResponseWriter, r *http.Request) {
 			CreateCourseReview(components.HttpComponents(w, r, c))
 		})
-		r.Post("/question", func(w http.ResponseWriter, r *http.Request) {
+		r.Post("/questions", func(w http.ResponseWriter, r *http.Request) {
 			AddAnswer(components.HttpComponents(w, r, c))
 		})
-		r.Post("/{id}/comment", func(w http.ResponseWriter, r *http.Request) {
+		r.Post("/{id}/comments", func(w http.ResponseWriter, r *http.Request) {
 			AddComment(components.HttpComponents(w, r, c))
 		})
-		r.Get("/{id}/comment", func(w http.ResponseWriter, r *http.Request) {
+		r.Get("/{id}/comments", func(w http.ResponseWriter, r *http.Request) {
 			GetCommentsByCourse(components.HttpComponents(w, r, c))
 		})
-		r.Get("/{id}/enrollment", func(w http.ResponseWriter, r *http.Request) {
+		r.Get("/{id}/enrollments", func(w http.ResponseWriter, r *http.Request) {
 			GetEnrollmentInfo(components.HttpComponents(w, r, c))
 		})
-		r.Post("/{id}/comment/like", func(w http.ResponseWriter, r *http.Request) {
+		r.Post("/{courseID}/comments/{commentID}/likes", func(w http.ResponseWriter, r *http.Request) {
 			AddLikeToComment(components.HttpComponents(w, r, c))
 		})
 	})
